# Banks-L.E.I.

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_bank_lei.py
.github/workflows/: ci.yml
findlei/: main.py  requirements.txt
findlei.egg-info/: PKG-INFO  SOURCES.txt
src/lei_enricher/: __init__.py  cli.py
static/: index.html
static.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_excel_handler.py  test_lei_checker.py
