[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lei-enricher"
version = "0.1.0"
description = "Batch-validate and enrich LEI codes via GLEIF API — usable as a library, CLI, or web-app backend"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
  { name = "Thanasis" }
]
keywords = ["LEI", "GLEIF", "KYC", "AML", "compliance", "excel", "enrichment"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

# Core deps — no GUI, works headless (great for web apps)
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.optional-dependencies]
# Desktop GUI
gui = ["PySide6>=6.6"]
# ODS (LibreOffice Calc) support
ods = ["odfpy>=1.4"]
# Web app backend (Flask or FastAPI — pick one)
web = ["flask>=3.0"]
web-async = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# All extras
all = ["PySide6>=6.6", "odfpy>=1.4", "flask>=3.0"]
# Dev / test
dev = [
  "pytest>=8.0",
  "responses>=0.25.0",
  "ruff>=0.5.0",
  "pytest-qt>=4.4.0",
]

[project.urls]
Homepage = "https://github.com/ThanasisSoftwareDeveloper/Banks-L.E.I."
Repository = "https://github.com/ThanasisSoftwareDeveloper/Banks-L.E.I."
"Bug Tracker" = "https://github.com/ThanasisSoftwareDeveloper/Banks-L.E.I./issues"

[project.scripts]
# CLI entry point — works without GUI
lei-enrich = "lei_enricher.cli:main"
# Desktop GUI entry point — only works with [gui] extra
lei-enricher = "lei_enricher.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
