[build-system]
requires = ["setuptools >= 40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "findlei"
version = "2.1.6"
description = "LEI lookup and management tool for banking compliance"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
log_cli        = true
log_cli_level  = "WARNING"
addopts        = "-v --tb=short"

[tool.coverage.run]
source  = ["."]
omit    = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
